--- a/.gitignore
+++ b/.gitignore
@@ -153,6 +153,13 @@ dmypy.json
 cython_debug/
 
 temp/
+reports/
+
+# Visual Studio Code
+.vscode/
+
+# Node
+node_modules/
 
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
@@ -160,3 +167,8 @@ temp/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# Pants workspace files
+/.pants.*
+/dist/
+/.pids
