--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
     "record_format": "avro",
     "sink": "kafka",
-    "kafka_brokers": "localhost:9093"
+    "kafka_brokers": "localhost:9093",
+    "foo": "bar"
 }
