--- a/dependencies/pyproject.toml
+++ b/dependencies/pyproject.toml
@@ -16,6 +16,7 @@ orjson = "^3.9.10"
 confluent-kafka = "^2.3.0"
 jsonschema = "^4.20.0"
 geoip2 = "^4.8.0"
+boto3 = "^1.34.11"
 
 [build-system]
 requires = ["poetry-core"]
