--- a/datenstrom/processing/BUILD
+++ b/datenstrom/processing/BUILD
@@ -1,1 +1,19 @@
 python_sources()
+
+pex_binary(
+  name="enricher_bin",
+  entry_point="datenstrom.processing.main",
+  env={"MY_ENV_VAR": "1"},
+  dependencies=["datenstrom/processing/main.py"],
+  interpreter_constraints=["==3.11.*"],
+  include_tools=True,
+  layout = "packed",
+  execution_mode = "venv",
+)
+
+docker_image(
+    name="datenstrom-enricher",
+    image_tags=("latest",),
+    dependencies=[":enricher_bin"],
+    repository="mths/datenstrom-enricher",
+)
