--- a/dependencies/pyproject.toml
+++ b/dependencies/pyproject.toml
@@ -9,7 +9,7 @@ readme = "README.md"
 python = "^3.11"
 fastapi = "^0.105.0"
 pydantic-settings = "^2.1.0"
-uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
+uvicorn = {extras = ["standard"], version = "^0.25.0"}
 thriftpy2 = "^0.4.17"
 fastavro = "^1.9.1"
 orjson = "^3.9.10"
@@ -17,6 +17,9 @@ confluent-kafka = "^2.3.0"
 jsonschema = "^4.20.0"
 geoip2 = "^4.8.0"
 boto3 = "^1.34.11"
+gunicorn = "^21.2.0"
+pydantic = "^2.5.3"
+requests = "^2.31.0"
 
 [build-system]
 requires = ["poetry-core"]
