fixed docker output

--- a/datenstrom/collector/Dockerfile
+++ b/datenstrom/collector/Dockerfile
@@ -1,8 +1,10 @@
 FROM python:3.11-slim
 
 WORKDIR /app
+ENV PYTHONUNBUFFERED=1
 ENV PATH=/venv/bin:$PATH
 ENV ASSET_DIR=/app/assets
+ENV FORWARDED_ALLOW_IPS="*"
 
 COPY datenstrom.collector/collector_bin.pex /app/collector_bin.pex
 
