--- a/dependencies/pyproject.toml
+++ b/dependencies/pyproject.toml
@@ -20,6 +20,8 @@ boto3 = "^1.34.11"
 gunicorn = "^21.2.0"
 pydantic = "^2.5.3"
 requests = "^2.31.0"
+pyjwt = {extras = ["cryptography"], version = "^2.8.0"}
+cryptography = "^41.0.7"
 
 [build-system]
 requires = ["poetry-core"]
