--- a/dependencies/pyproject.toml
+++ b/dependencies/pyproject.toml
@@ -22,6 +22,8 @@ pydantic = "^2.5.3"
 requests = "^2.31.0"
 pyjwt = {extras = ["cryptography"], version = "^2.8.0"}
 cryptography = "^41.0.7"
+duckdb = "^0.9.2"
+pyarrow = "^14.0.2"
 
 [build-system]
 requires = ["poetry-core"]
