refactored to transport instead of sink config

--- a/datenstrom/processing/BUILD
+++ b/datenstrom/processing/BUILD
@@ -2,9 +2,9 @@ python_sources()
 
 pex_binary(
   name="enricher_bin",
-  entry_point="datenstrom.processing.main",
+  entry_point="datenstrom.processing.enricher",
   env={"MY_ENV_VAR": "1"},
-  dependencies=["datenstrom/processing/main.py"],
+  dependencies=["datenstrom/processing/enricher.py"],
   interpreter_constraints=["==3.11.*"],
   include_tools=True,
   layout = "packed",
