--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ pyjwt = {extras = ["cryptography"], version = "^2.8.0"}
 cryptography = "^41.0.7"
 duckdb = "^0.9.2"
 pyarrow = "^14.0.2"
+cachetools = "==5.3.2"
 
 [build-system]
 requires = ["poetry-core"]
