--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ cryptography = "^41.0.7"
 duckdb = "^0.9.2"
 pyarrow = "^14.0.2"
 cachetools = "==5.3.2"
+ua-parser = "^0.18.0"
 
 [build-system]
 requires = ["poetry-core"]
