--- a/deployment/docker-compose.yaml
+++ b/deployment/docker-compose.yaml
@@ -16,7 +16,8 @@ services:
       - 'IGLU_SCHEMA_REGISTRIES=["http://iglucentral.com/schemas/"]'
       - GEOIP_ENABLED=true
       - AWS_DEFAULT_REGION=eu-central-1
-      - 'DOMAIN_CHECK_REGEX=.*[.]datenstrom[.]io'
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
   enricher:
     image: mths/datenstrom-enricher
@@ -31,3 +32,5 @@ services:
       - 'IGLU_SCHEMA_REGISTRIES=["http://iglucentral.com/schemas/"]'
       - GEOIP_ENABLED=true
       - AWS_DEFAULT_REGION=eu-central-1
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
